@@ -1,30 +1,0 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
-
-language: c
-sudo: required
-dist: bionic
-
-jobs:
-  include:
-    #- name: r-3.5
-    #  env: R_VERSION="3.5"
-    - name: r-4.0
-      env: R_VERSION="4.0"
-
-before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  - ./run.sh bootstrap
-
-install:
-  - ./run.sh install_aptget r-cran-rmarkdown
-
-script:
-  - ./run.sh run_tests
-
-after_failure:
-  - ./run.sh dump_logs
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
