@@ -1,3 +1,8 @@
+2021-11-05  Dirk Eddelbuettel  <edd@debian.org>
+
+ 	* README.md: Remove Travis badge
+	* .travis.yml: Remove Travis YAML config
+
 2021-03-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL): Add package page to URL entry
